--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .container{
+            background-color: brown;
+            height: 200px;
+            width: 200px;
+        }
+    </style>
 </head>
 <body>
    <h1>Hellow World</h1> 
+   <p class="container">section a</p>
 </body>
 </html>
